# linear-procgen

./: pyproject.toml  requirements.txt  setup.cfg
linear_procgen/: __init__.py  feature_envs.py  gym3_util.py  maze.py  miner.py  util.py
linear_procgen/logged_env/: logged_miner.py  writer.py
tests/: test_maze.py  test_miner.py
